--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
-*\annuaire_entreprises\settings.py
+# Django settings with sensitive information
+annuaire_entreprises/annuaire_entreprises/settings.py
+
+# Python
+*.pyc
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Django
+*.log
+*.pot
+*.pyc
+db.sqlite3
+media/
+
+# Virtual Environment
+venv/
+env/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
